--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test2",
+  "name": "darwinnn",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moment": "^2.29.1",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.7.0",
